--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.5.0",
+    "antd": "^5.22.7",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
